Fixed skill grid overflow issue

--- a/src/css/Experience.css
+++ b/src/css/Experience.css
@@ -21,13 +21,13 @@ h1{
 
 .experience-section{
     width: 100%;
-    height: 100%;
+    height: 400px;
 }
 
 .company-grid {
     display: flex;
     width: 100%;
-    height: 60%;
+    height: 100%;
     align-items: stretch;
 }
 
